--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles.css" />
-    <title>About [YOUR NAME]</title>
+    <link rel="stylesheet" href="/styles/styles.css" />
+    <title>About me - Becky Pearce</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">[YOUR NAME]</a>
+        <a class="navbar-brand" href="index.html">Becky Pearce</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -49,31 +49,48 @@
       </div>
     </nav>
     <h1 class="text-center">About me</h1>
-    <h3 class="text-center">Front-end developer from [YOUR LOCATION]</h3>
+    <h3 class="text-center">Front-end developer from Cheshire, UK</h3>
     <div class="about-paragraphs text-center">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
         aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
         alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
         blanditiis harum.
+        <br /><br />Lorem ipsum dolor sit amet. Id sunt autem qui voluptatem
+        itaque hic repudiandae consequatur qui dolore dolor est dolorem
+        repellendus ex deserunt molestias! Eum tempora quia qui harum quae ut
+        incidunt repellat ea ratione quos est assumenda molestiae? Ad fugiat
+        repudiandae est praesentium rerum et adipisci ducimus aut quam fuga eos
+        Quis error non dolores eveniet non autem voluptas.
       </p>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="https://images.pexels.com/photos/317155/pexels-photo-317155.jpeg?cs=srgb&dl=balance-fitness-girl-317155.jpg&fm=jpg"
+            class="img-fluid p-2 shadow rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="https://images.pexels.com/photos/1431822/pexels-photo-1431822.jpeg"
+            class="img-fluid p-2 shadow rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="https://images.pexels.com/photos/313716/pexels-photo-313716.jpeg"
+            class="img-fluid p-2 shadow rounded"
+          />
         </div>
       </div>
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:[YOUR EMAIL]" class="email-link"> [YOUR EMAIL] </a>
+      <a href="mailto:rspearce92@gmail.com" class="email-link">
+        rspearce92@gmail.com
+      </a>
     </div>
   </body>
 </html>
