--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[YOUR NAME]</title>
+    <head>
+      <meta
+        name="description"
+        content="A page dedicated about Becky Pearce and her portfolio"
+      />
+    </head>
+    <title>Front-End Developer - Becky Pearce</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +27,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">[YOUR NAME]</a>
+        <a class="navbar-brand" href="index.html">Becky Pearce</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -51,16 +57,22 @@
       </div>
     </nav>
     <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">[YOUR NAME]</h1>
-    <h3 class="text-center">Front-end developer, based in [YOUR LOCATION]</h3>
+    <h1 class="text-center">Becky</h1>
+    <h3 class="text-center">Front-end developer, based in Cheshire, UK</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a href="about.html#contact" class="primary-link" title="contact-me"
+        >Contact me</a
+      >
+      <a href="about.html" class="secondary-link" title="about-me">About me</a>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+      <div class="row justify-content-center">
+        <div class="col-6 d-none d-sm-block">
+          <img
+            src="https://images.pexels.com/photos/317155/pexels-photo-317155.jpeg?cs=srgb&dl=balance-fitness-girl-317155.jpg&fm=jpg"
+            class="img-fluid rounded"
+            alt="yoga example outside"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -71,11 +83,13 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link" title="launch-yoga-app"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row mt-5 justify-content-center">
         <div class="col-6">
           <h2 class="mb-3">Weather app</h2>
           <p>
@@ -85,16 +99,26 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="launch-weather-app"
+              >Launch Weather App</a
+            >
           </div>
         </div>
-        <div class="col-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+        <div class="col-6 d-none d-sm-block">
+          <img
+            src="https://images.pexels.com/photos/1431822/pexels-photo-1431822.jpeg"
+            class="img-fluid rounded"
+            alt="weather clouds"
+          />
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+      <div class="row mt-5 justify-content-center">
+        <div class="col-6 d-none d-sm-block">
+          <img
+            src="https://images.pexels.com/photos/313716/pexels-photo-313716.jpeg"
+            class="img-fluid rounded"
+            alt="yougurt with berries"
+          />
         </div>
         <div class="col-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -105,7 +129,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="launch-yogurt-app"
+              >Launch Weather App</a
+            >
           </div>
         </div>
       </div>
