SEO changes, imrpoves CSS and made it more responsive

--- a/about.html
+++ b/about.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <head>
+      <meta
+        name="description"
+        content="contact page for becky pearce, check out her projects"
+      />
+    </head>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -36,13 +42,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/" title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a class="nav-link active" href="/about.html" title="About me"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact" title="Conact me"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -69,26 +81,33 @@
         <div class="col-sm-4">
           <img
             src="https://images.pexels.com/photos/317155/pexels-photo-317155.jpeg?cs=srgb&dl=balance-fitness-girl-317155.jpg&fm=jpg"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 mb-4 shadow rounded"
+            alt="yoga example outside"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="https://images.pexels.com/photos/1431822/pexels-photo-1431822.jpeg"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 mb-4 shadow rounded"
+            alt="weather clouds"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="https://images.pexels.com/photos/313716/pexels-photo-313716.jpeg"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 mb-4 shadow rounded"
+            alt="yogurt with berries"
           />
         </div>
       </div>
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:rspearce92@gmail.com" class="email-link">
+      <a
+        href="mailto:rspearce92@gmail.com"
+        class="email-link"
+        title="email address"
+      >
         rspearce92@gmail.com
       </a>
     </div>
