--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Becky Pearce</a>
+        <a class="navbar-brand" href="/" title="homepage">Becky Pearce</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -42,15 +42,26 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="/about.html" title="About me"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Becky Pearce"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -60,21 +71,21 @@
     <h1 class="text-center">Becky</h1>
     <h3 class="text-center">Front-end developer, based in Cheshire, UK</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link" title="contact-me"
+      <a href="/about.html#contact" class="primary-link" title="Contact me"
         >Contact me</a
       >
-      <a href="about.html" class="secondary-link" title="about-me">About me</a>
+      <a href="/about.html" class="secondary-link" title="About me">About me</a>
     </div>
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-6 d-none d-sm-block">
+      <div class="row">
+        <div class="col-sm-6">
           <img
             src="https://images.pexels.com/photos/317155/pexels-photo-317155.jpeg?cs=srgb&dl=balance-fitness-girl-317155.jpg&fm=jpg"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
             alt="yoga example outside"
           />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -83,14 +94,17 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="launch-yoga-app"
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="launch-yoga-app"
               >Launch Yoga App</a
             >
           </div>
         </div>
       </div>
-      <div class="row mt-5 justify-content-center">
-        <div class="col-6">
+      <div class="row mt-5">
+        <div class="col-sm-6">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -99,28 +113,31 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="launch-weather-app"
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="launch-weather-app"
               >Launch Weather App</a
             >
           </div>
         </div>
-        <div class="col-6 d-none d-sm-block">
+        <div class="col-sm-6">
           <img
             src="https://images.pexels.com/photos/1431822/pexels-photo-1431822.jpeg"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
             alt="weather clouds"
           />
         </div>
       </div>
-      <div class="row mt-5 justify-content-center">
-        <div class="col-6 d-none d-sm-block">
+      <div class="row mt-5">
+        <div class="col-sm-6">
           <img
             src="https://images.pexels.com/photos/313716/pexels-photo-313716.jpeg"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
             alt="yougurt with berries"
           />
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -129,8 +146,11 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="launch-yogurt-app"
-              >Launch Weather App</a
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="launch-yogurt-app"
+              >Launch Yogurt App</a
             >
           </div>
         </div>
